Various minor changes and corrections.

--- a/01_agama/ekottarika/03/EA_03_03.md
+++ b/01_agama/ekottarika/03/EA_03_03.md
@@ -47,7 +47,7 @@ next: EA_03_04.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.554c24'>「聖眾者所謂四雙八輩。 是謂如來聖眾應當恭敬、承事、禮順。 所以然者？ 是世福田故。 於此眾中，皆同一器，亦以自度，復度他人，至三乘道。 如此之業名曰聖眾。</td>
-    <td id='p7'>7. “‘Noble assembly’ means the four pairs and eight ranks of people.<sup id="ref3"><a href="#n3">3</a></sup> They are called the Tathāgata’s noble assembly who ought to be respected, served, and paid homage. For what reason? Because they are the world’s field of merit. Those among these assemblies are one and the same vessel, and they liberate other people by liberating themselves with the path of three vehicles. Those who do this work are called the ‘noble assembly.’</td>
+    <td id='p7'>7. “‘Noble assembly’ means the four pairs and eight ranks of people.<sup id="ref3"><a href="#n3">3</a></sup> They are called the Tathāgata’s noble assembly who ought to be respected, served, and paid homage. Why is that? Because they are the world’s field of merit. Those among these assemblies are one and the same vessel, and they liberate other people by liberating themselves with the path of the three vehicles. Those who do this work are called the ‘noble assembly.’</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.554c27'>「是謂，諸比丘，若念僧者便有名譽，成大果報、諸善普至，得甘露味，至無為處。 便成神通，除諸亂想，逮沙門果，自致涅槃。</td>
