--- a/01_agama/ekottarika/12/EA_12_06.md
+++ b/01_agama/ekottarika/12/EA_12_06.md
@@ -39,7 +39,7 @@ next: EA_12_07.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.570b12'>世尊告曰： 「善哉，善哉！迦葉，多所饒益度人無量、廣，及一切天人得度。 所以然者？ 若，迦葉，此頭陀行在世者，我法亦當久在於世。 設法在世，益増天道，三惡道便減。 亦成須陀洹、斯陀含、阿那含，三乘之道皆存於世。</td>
-    <td id='p7'>7. The Bhagavān told him, “Good, Kāśyapa! Good! The many benefits of a liberated person are measureless and broad, and then all the gods and people can be liberated. Why is that? Kāśyapa, if these ascetic practices exist in the world, then my Dharma will also exist in the world for a long time. If the Dharma exists in the world, it will bless others with the road to heaven, and the three bad destinies will dwindle. People will become stream-enterers, once-returners, and non-returners, and the path of the three vehicles will survive in the world.</td>
+    <td id='p7'>7. The Bhagavān told him, “Good, good! Kāśyapa, the many benefits of a liberated person are measureless and broad, and they can liberated all the gods and people. Why is that? Kāśyapa, if these ascetic practices exist in the world, then my Dharma will also exist in the world for a long time. If the Dharma exists in the world, it will bless others with the road to heaven, and the three bad destinies will dwindle. People will become stream-enterers, once-returners, and non-returners, and the path of the three vehicles will survive in the world.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.570b17'>「諸比丘，所學皆當如迦葉所習。 如是，諸比丘，當作是學。」</td>
