--- a/01_agama/madhyama/MA_106.md
+++ b/01_agama/madhyama/MA_106.md
@@ -40,17 +40,17 @@ next: MA_109.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0596b09" target="_blank">T26.1.596b9-c17</a>. Its parallels include <a href="https://suttacentral.net/mn1" target="_blank">MN 1</a>, EĀ 44.6, and T56. It has a stronger resemblance to T56, while MN 1 and EĀ 44.6 are quite similar to each other.<br/>
-The main difference between this version and MN 1 is that the Theravāda version goes through the analysis of the list of concepts eight times as opposed to three times in MĀ 106. Both begin with the case of the deluded person who believes the various concepts are a form of soul (S. <em>atman</em>). MĀ 106 then moves to the case of someone who understands these concepts properly as not being a soul. Finally, the Buddha says the same of himself. MN 1 adds the case of a trainee monk between a common person and an <em>arhat</em> and finishes with the Buddha’s own knowledge about these things. MN 1 repeats some of these cases to make different statements about attainments, such as the elimination of the three unskillful roots.<br/>
-The closest parallel to MN 1, EĀ 44.6, is a much more succinct version but covers the same four cases: the ordinary person, the unliberated disciple, the <em>arhat</em>, and the Tathāgata. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>earth … everything.</em> C. <span class="ch">地⋯水⋯火⋯風⋯神⋯天⋯生主⋯梵天⋯無煩⋯無熱⋯淨⋯無量空處⋯無量識處⋯無所有處⋯非有想非無想處⋯一⋯別⋯若干⋯見⋯聞⋯識⋯知⋯得⋯觀⋯意所念⋯意所思⋯從此世至彼世⋯從彼世至此世⋯一切</span>, P. <em>pathaviṁ … āpaṁ … tejaṁ … vāyaṁ … bhūte … deve … pajāpatiṁ … brahmaṁ … ābhassare … subhakiṇhe … vehapphale … abhibhuṁ … ākāsānañcāyatanaṁ … viññāṇañcāyatanaṁ … ākiñcaññāyatanaṁ … nevasaññānāsaññāyatanaṁ … diṭṭhaṁ … sutaṁ … mutaṁ … viññātaṁ … ekattaṁ … nānattaṁ … sabbaṁ … nibbānaṁ</em>.<br/>
-This list of concepts has 28 items, while the parallel list in MN 1 has 24. T56 has a list very similar to this one that contains 24 or 25 items depending on how it’s parsed. EĀ 44.6 has a list much closer to that of MN 1 that includes 23 items. The differences are mainly in which form realm heavens are included and also the end of the list, which sometimes ends with “everything” and sometimes with “<em>nirvāṇa</em>.” There’s not enough space here to compare four parallel lists of this size, but I do want to make a few remarks about my translation of the present version.<br/>
-<em>earth … water … fire … air</em>. C. <span class="ch">地⋯水⋯火⋯風</span>, P. <em>pathaviṁ … āpaṁ … tejaṁ … vāyaṁ</em>. These are the four basic elements, which begin all four of the parallel lists. They collectively represent the physical Earth in Buddhism and Brahmanism.<br/>
-<em>spirits … gods … Prajāpati … Brahmā … Avṛha … Atapa … purity</em>. C. <span class="ch">神⋯天⋯生主⋯梵天⋯無煩⋯無熱⋯淨</span>, P. <em>bhūte … deve … pajāpatiṁ … brahmaṁ … ābhassare … subhakiṇhe … vehapphale … abhibhuṁ</em>. This section of the list covers the heavenly beings of the desire and form realm. I’ve translated 神 as “spirits” based on the reading in the closely related list in T56, which reads <span class="ch">天神</span> (“gods and spirits”). Three of the gods listed are translated to C.: <span class="ch">生主</span> (“Lord of Living Things”) = Prajāpati, <span class="ch">無煩</span> (“No Vexation”) = Avṛha, and <span class="ch">無熱</span> (“No Burning”) = Atapa. I’m not sure what <span class="ch">淨</span> (“pure, clean”) translates here. Presumably, it represents a form realm heaven above Atapa, so perhaps the original is Śubha or Śuddha. I’ve translated it literally for the time being.<br/>
-<em>the abode of measureless space … abode of measureless awareness … abode of nothingness … abode neither with nor without conception</em>. C. <span class="ch">無量空處⋯無量識處⋯無所有處⋯非有想非無想處</span>, P. <em>ākāsānañcāyatanaṁ … viññāṇañcāyatanaṁ … ākiñcaññāyatanaṁ … nevasaññānāsaññāyatanaṁ.</em> These are the four formless realm heavens that became standard among Buddhists.<br/>
-<em>oneness … distinction … diversity.</em> C. <span class="ch">一⋯別⋯若干</span>, P. <em>ekattaṁ … nānattaṁ</em>. Here, the list moves from cosmological categories to categories of concepts, knowledge, and experience. MN 1 places these items at the end just before “the all” and “<em>nirvāṇa</em>.” This version is the only one that includes 別, which presumably is intended to be the antonym of 一 (“oneness”). I’ve rendered it as “distinction.”<br/>
-<em>what’s seen … heard … discerned … known … found … investigated … mental thought … mental intention … from this world to that world … from that world to this world.</em> C. <span class="ch">見⋯聞⋯識⋯知⋯得⋯觀⋯意所念⋯意所思⋯從此世至彼世⋯從彼世至此世</span>, P. <em>diṭṭhaṁ … sutaṁ … mutaṁ … viññātaṁ</em>. This portion of the list is the most expanded. It appears to lift ten items from the six abodes of views found in MĀ 200, which read: <span class="ch">見，聞，識，知，所得，所觀，意所思、念，從此世至彼世，從彼世至此世</span> (cf. MN 22: <em>diṭṭhaṁ sutaṁ mutaṁ viññātaṁ pattaṁ pariyesitaṁ, anuvicaritaṁ manasā</em>). This makes it clear that 得 (“attained, found,” P. <em>pattaṁ</em>) and <span class="ch">觀</span> (“observed, investigated,” P. <em>pariyesitaṁ</em>) are separate items in the list. <span class="ch">意所思念</span> in MĀ 200 is separated into two items here, which mean something like “mental thought” and “mental intention,” though the practical meaning that was intended isn’t clear to me.<br/>
-<em>everything</em>. C. <span class="ch">一切</span>, P. <em>sabbaṁ</em>. MN 1 and EĀ 44.6 end the list with <em>nirvāṇa,</em> and MN 1 includes <em>sabbaṁ</em> as the next to the last item. T56 doesn’t include either of these final items. In other early <em>sūtra</em>s, “everything” refers to the entire world of experience. [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0596b09" target="_blank">T26.1.596b9-c17</a>. Its parallels include <a href="https://suttacentral.net/mn1" target="_blank">MN 1</a>, EĀ 44.6, and T56. It has a stronger resemblance to T56, while MN 1 and EĀ 44.6 are quite similar to each other.</p>
+<p>The main difference between this version and MN 1 is that the Theravāda version goes through the analysis of the list of concepts eight times as opposed to three times in MĀ 106. Both begin with the case of the deluded person who believes the various concepts are a form of soul (S. <em>atman</em>). MĀ 106 then moves to the case of someone who understands these concepts properly as not being a soul. Finally, the Buddha says the same of himself. MN 1 adds the case of a trainee monk between a common person and an <em>arhat</em> and finishes with the Buddha’s own knowledge about these things. MN 1 repeats some of these cases to make different statements about attainments, such as the elimination of the three unskillful roots.</p>
+<p>The closest parallel to MN 1, EĀ 44.6, is a much more succinct version but covers the same four cases: the ordinary person, the unliberated disciple, the <em>arhat</em>, and the Tathāgata. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>earth … everything.</em> C. <span class="ch">地⋯水⋯火⋯風⋯神⋯天⋯生主⋯梵天⋯無煩⋯無熱⋯淨⋯無量空處⋯無量識處⋯無所有處⋯非有想非無想處⋯一⋯別⋯若干⋯見⋯聞⋯識⋯知⋯得⋯觀⋯意所念⋯意所思⋯從此世至彼世⋯從彼世至此世⋯一切</span>, P. <em>pathaviṁ … āpaṁ … tejaṁ … vāyaṁ … bhūte … deve … pajāpatiṁ … brahmaṁ … ābhassare … subhakiṇhe … vehapphale … abhibhuṁ … ākāsānañcāyatanaṁ … viññāṇañcāyatanaṁ … ākiñcaññāyatanaṁ … nevasaññānāsaññāyatanaṁ … diṭṭhaṁ … sutaṁ … mutaṁ … viññātaṁ … ekattaṁ … nānattaṁ … sabbaṁ … nibbānaṁ</em>.</p>
+<p>This list of concepts has 28 items, while the parallel list in MN 1 has 24. T56 has a list very similar to this one that contains 24 or 25 items depending on how it’s parsed. EĀ 44.6 has a list much closer to that of MN 1 that includes 23 items. The differences are mainly in which form realm heavens are included and also the end of the list, which sometimes ends with “everything” and sometimes with “<em>nirvāṇa</em>.” There’s not enough space here to compare four parallel lists of this size, but I do want to make a few remarks about my translation of the present version.</p>
+<p><em>earth … water … fire … air</em>. C. <span class="ch">地⋯水⋯火⋯風</span>, P. <em>pathaviṁ … āpaṁ … tejaṁ … vāyaṁ</em>. These are the four basic elements, which begin all four of the parallel lists. They collectively represent the physical Earth in Buddhism and Brahmanism.</p>
+<p><em>spirits … gods … Prajāpati … Brahmā … Avṛha … Atapa … purity</em>. C. <span class="ch">神⋯天⋯生主⋯梵天⋯無煩⋯無熱⋯淨</span>, P. <em>bhūte … deve … pajāpatiṁ … brahmaṁ … ābhassare … subhakiṇhe … vehapphale … abhibhuṁ</em>. This section of the list covers the heavenly beings of the desire and form realm. I’ve translated 神 as “spirits” based on the reading in the closely related list in T56, which reads <span class="ch">天神</span> (“gods and spirits”). Three of the gods listed are translated to C.: <span class="ch">生主</span> (“Lord of Living Things”) = Prajāpati, <span class="ch">無煩</span> (“No Vexation”) = Avṛha, and <span class="ch">無熱</span> (“No Burning”) = Atapa. I’m not sure what <span class="ch">淨</span> (“pure, clean”) translates here. Presumably, it represents a form realm heaven above Atapa, so perhaps the original is Śubha or Śuddha. I’ve translated it literally for the time being.</p>
+<p><em>the abode of measureless space … abode of measureless awareness … abode of nothingness … abode neither with nor without conception</em>. C. <span class="ch">無量空處⋯無量識處⋯無所有處⋯非有想非無想處</span>, P. <em>ākāsānañcāyatanaṁ … viññāṇañcāyatanaṁ … ākiñcaññāyatanaṁ … nevasaññānāsaññāyatanaṁ.</em> These are the four formless realm heavens that became standard among Buddhists.</p>
+<p><em>oneness … distinction … diversity.</em> C. <span class="ch">一⋯別⋯若干</span>, P. <em>ekattaṁ … nānattaṁ</em>. Here, the list moves from cosmological categories to categories of concepts, knowledge, and experience. MN 1 places these items at the end just before “the all” and “<em>nirvāṇa</em>.” This version is the only one that includes 別, which presumably is intended to be the antonym of 一 (“oneness”). I’ve rendered it as “distinction.”</p>
+<p><em>what’s seen … heard … discerned … known … found … investigated … mental thought … mental intention … from this world to that world … from that world to this world.</em> C. <span class="ch">見⋯聞⋯識⋯知⋯得⋯觀⋯意所念⋯意所思⋯從此世至彼世⋯從彼世至此世</span>, P. <em>diṭṭhaṁ … sutaṁ … mutaṁ … viññātaṁ</em>. This portion of the list is the most expanded. It appears to lift ten items from the six abodes of views found in MĀ 200, which read: <span class="ch">見，聞，識，知，所得，所觀，意所思、念，從此世至彼世，從彼世至此世</span> (cf. MN 22: <em>diṭṭhaṁ sutaṁ mutaṁ viññātaṁ pattaṁ pariyesitaṁ, anuvicaritaṁ manasā</em>). This makes it clear that <span class="ch">得</span> (“attained, found,” P. <em>pattaṁ</em>) and <span class="ch">觀</span> (“observed, investigated,” P. <em>pariyesitaṁ</em>) are separate items in the list. <span class="ch">意所思念</span> in MĀ 200 is separated into two items here, which mean something like “mental thought” and “mental intention,” though the practical meaning that was intended isn’t clear to me.</p>
+<p><em>everything</em>. C. <span class="ch">一切</span>, P. <em>sabbaṁ</em>. MN 1 and EĀ 44.6 end the list with <em>nirvāṇa,</em> and MN 1 includes <em>sabbaṁ</em> as the next to the last item. T56 doesn’t include either of these final items. In other early <em>sūtra</em>s, “everything” refers to the entire world of experience. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
