--- a/01_agama/madhyama/MA_142.md
+++ b/01_agama/madhyama/MA_142.md
@@ -45,7 +45,7 @@ next: MA_146.html
 </tr>
   <tr>
     <td class='ch' title='t26.2.648a25'>我聞如是： 一時，佛遊王舍城，在鷲巖山中。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha travelled to Rājagṛha and was staying on Mount Gṛdhrakūṭa.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha traveled to Rājagṛha and was staying on Mount Gṛdhrakūṭa.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.2.648a26'>爾時，摩竭陀王、未生怨、鞞陀提子與䟦耆相憎。 常在眷屬數作是說： 「䟦耆國人有大如意足，有大威德，有大福祐，有大威神。 我當斷滅䟦耆人種，破壞䟦耆。 令䟦耆人遭無量厄。」</td>
@@ -53,7 +53,7 @@ next: MA_146.html
   </tr>
   <tr>
     <td class='ch' title='t26.2.648b1'>於是，摩竭陀王未生怨鞞陀提子聞世尊遊王舍城，在鷲巖山中，便告大臣雨勢曰： 「我聞沙門瞿曇遊王舍城，在鷲巖山中。 雨勢，汝往至沙門瞿曇所，汝持我名問訊：『聖體安快、無病、氣力如常耶？』 當作是語： 『瞿曇，摩竭陀王、未生怨、鞞陀提子問訊聖體安快、無病、氣力如常耶？ 瞿曇，摩竭陀王、未生怨、鞞陀提子與䟦耆相憎。 常在眷屬數作是說： 「䟦耆國人有大如意足，有大威德，有大福祐，有大威神。 我當斷滅䟦耆人種，破壞䟦耆。 令䟦耆人遭無量厄。」 沙門瞿曇當何所說？』 雨勢，若沙門瞿曇有所說者，汝善受持。 所以者何？ 如是之人，終不妄說。」</td>
-    <td id='p3'>3. When King Ajātaśatru heard that the Bhagavān had travelled to Rājagṛha and was staying on Mount Gṛdhrakūṭa, he told his great minister Varṣākāra:<sup id="ref3"><a href="#n3">3</a></sup> “I’ve heard that the ascetic Gautama has travelled to Rājagṛha and is staying on Mount Gṛdhrakūṭa. Varṣākāra, you go to the ascetic Gautama and ask in my name: ‘Is the sage feeling well, in good health, and as energetic as usual?’ Then you are to say to him, ‘Gautama, the King of Magadha Ajātaśatru, who is the son of a wise woman, greets you and asks whether the sage is feeling well, in good health, and as energetic as usual? Gautama, King Ajātaśatru and the Vṛji dislike each other. He often says this while he’s with his entourage: “The people of Vṛji have great willpower, great dignity, great fortune, and great spirit. I will wipe out the Vṛji tribes and destroy Vṛji. I will cause a measureless disaster to befall those Vṛji people.” What does the ascetic Gautama have to say about that?’ Varṣākāra, if the ascetic Gautama has something to say about it, remember it well. Why is that? Such men as he never speak falsely.”</td>
+    <td id='p3'>3. When King Ajātaśatru heard that the Bhagavān had traveled to Rājagṛha and was staying on Mount Gṛdhrakūṭa, he told his great minister Varṣākāra:<sup id="ref3"><a href="#n3">3</a></sup> “I’ve heard that the ascetic Gautama has traveled to Rājagṛha and is staying on Mount Gṛdhrakūṭa. Varṣākāra, you go to the ascetic Gautama and ask in my name: ‘Is the sage feeling well, in good health, and as energetic as usual?’ Then you are to say to him, ‘Gautama, the King of Magadha Ajātaśatru, who is the son of a wise woman, greets you and asks whether the sage is feeling well, in good health, and as energetic as usual? Gautama, King Ajātaśatru and the Vṛji dislike each other. He often says this while he’s with his entourage: “The people of Vṛji have great willpower, great dignity, great fortune, and great spirit. I will wipe out the Vṛji tribes and destroy Vṛji. I will cause a measureless disaster to befall those Vṛji people.” What does the ascetic Gautama have to say about that?’ Varṣākāra, if the ascetic Gautama has something to say about it, remember it well. Why is that? Such men as he never speak falsely.”</td>
   </tr>
   <tr>
     <td class='ch' title='t26.2.648b14'>大臣雨勢受王教已，乘最好乘，與五百乘俱出王舍城，即便往詣鷲巖山中。 登鷲巖山，下車步進，往詣佛所。 便與世尊共相問訊，却坐一面。 白曰： 「瞿曇，摩竭陀王、未生怨、鞞陀提子問訊聖體安快、無病、氣力如常耶？ 瞿曇，摩竭陀王、未生怨、鞞陀提子與䟦耆相憎。 常在眷屬數作是說： 『䟦耆國人有大如意足，有大威德，有大福祐，有大威神。 我當斷滅䟦耆人種，破壞䟦耆。 令䟦耆人遭無量厄。』 沙門瞿曇當何所說？」</td>
@@ -65,7 +65,7 @@ next: MA_146.html
 </tr>
   <tr>
     <td class='ch' title='t26.2.648b23'>世尊聞已，告曰： 「雨勢，我昔曾遊於䟦耆國。 彼國有寺名遮惒邏。 雨勢，爾時我為䟦耆國人說七不衰法，䟦耆國人則能受行七不衰法。 雨勢，若䟦耆國人行七不衰法而不犯者，䟦耆必勝，則為不衰。」</td>
-    <td id='p5'>5. Having heard this, the Bhagavān told him, “Varṣākāra, I once travelled to Vṛji in the past. That country has a temple called Cāpāla.<sup id="ref4"><a href="#n4">4</a></sup> Varṣākāra, I taught the people of Vṛji seven ways to not decline then, and the people of Vṛji were able to accept and practice those seven ways to not decline. Varṣākāra, if the people of Vṛji practice the seven ways to not decline and they don’t violate them, then Vṛji will surely be victorious and won’t decline.”</td>
+    <td id='p5'>5. Having heard this, the Bhagavān told him, “Varṣākāra, I once traveled to Vṛji in the past. That country has a temple called Cāpāla.<sup id="ref4"><a href="#n4">4</a></sup> Varṣākāra, I taught the people of Vṛji seven ways to not decline then, and the people of Vṛji were able to accept and practice those seven ways to not decline. Varṣākāra, if the people of Vṛji practice the seven ways to not decline and they don’t violate them, then Vṛji will surely be victorious and won’t decline.”</td>
   </tr>
   <tr>
     <td class='ch' title='t26.2.648b28'>大臣雨勢白世尊曰： 「沙門瞿曇略說此事，不廣分別。 我等不能得解此義。 願，沙門瞿曇，廣分別說，當令我等得知此義。」</td>
