--- a/01_agama/samyukta/01/SA1_44.md
+++ b/01_agama/samyukta/01/SA1_44.md
@@ -22,7 +22,7 @@ next: SA1_45.html
     <td id='p2'>2. Venerable Ānanda then addressed the monks, “When Venerable Pūrṇa Maitrāyaṇīputra<sup id="ref3"><a href="#n3">3</a></sup> was a junior who had recently left home, he often discussed the profound Dharma. He would say such things as this: ‘Ānanda, something that arises is considered to be self, not something that doesn’t arise. Ānanda, how is it that something that arises is considered to be self and not something that doesn’t arise? When form arises, that gives rise to self, not when it doesn’t arise. When feeling … conception … volition … awareness arises, that gives rise to self, not when it doesn’t arise. It’s like a man who sees his own face appear when he holds a bright mirror in his hand or when he looks at his reflection in clear water. He sees it because it appears, not because it doesn’t appear. Therefore, Ānanda, when form arises, that gives rise to self, not when it doesn’t arise. When feeling … conception … volition … awareness arises, that gives rise to self, not when it doesn’t arise. How is it, Ānanda? Is form permanent, or is it impermanent?’</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a6'>「答曰：『無常。』</td>
+    <td class="ch" title='t125.2.66a15'>「答曰：『無常。』</td>
     <td>“I replied, ‘Impermanent.’</td>
   </tr>
   <tr>
@@ -34,40 +34,40 @@ next: SA1_45.html
     <td>“I replied, ‘It’s painful.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「又問：『若無常、苦者，是變易法，聖弟子於中復計我、異我、相在不？』</td>
+    <td class="ch" title='t125.2.66a16'>「又問：『若無常、苦者，是變易法，聖弟子於中復計我、異我、相在不？』</td>
     <td id='p4'>4. “He also asked, ‘If something is impermanent and painful, it’s subject to change. Would a noble disciple consider that to be self, different than self, or that either is present in the other?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「答曰：『不也。』</td>
+    <td class="ch" title='t125.2.66a17'>「答曰：『不也。』</td>
     <td>“I replied, ‘No.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「『如是受、想、行、識為是常耶？為無常耶？』</td>
+    <td class="ch" title='t125.2.66a17'>「『如是受、想、行、識為是常耶？為無常耶？』</td>
     <td id='p5'>5. “‘In this way, is feeling … conception … volition … awareness permanent or impermanent?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「答曰：『無常。』</td>
+    <td class="ch" title='t125.2.66a18'>「答曰：『無常。』</td>
     <td>“I replied, ‘Impermanent.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「『若無常，是苦耶？』</td>
+    <td class="ch" title='t125.2.66a19'>「『若無常，是苦耶？』</td>
     <td id='p6'>6. “‘If it’s impermanent, is that painful?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「答曰：『是苦。』</td>
+    <td class="ch" title='t125.2.66a19'>「答曰：『是苦。』</td>
     <td>“I replied, ‘It’s painful.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「又問：『若無常、苦者，是變易法，多聞聖弟子於中寧復計我、異我、相在不？』</td>
+    <td class="ch" title='t125.2.66a19'>「又問：『若無常、苦者，是變易法，多聞聖弟子於中寧復計我、異我、相在不？』</td>
     <td id='p7'>7. “He also asked, ‘If something is impermanent and painful, then it’s subject to change. Would a noble disciple consider that to be self, different than self, or that either is present in the other?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「答曰：『不也。』</td>
+    <td class="ch" title='t125.2.66a21'>「答曰：『不也。』</td>
     <td>“I replied, ‘No.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a21'>「『阿難！是故，色若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。如是受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在如實知，如實觀察。如是觀者，聖弟子於色生厭、離欲、解脫：「我生已盡，梵行已立，所作已作，自知不受後有。」如是受、想、行、識，生厭、離欲、解脫：「我生已盡，梵行已立，所作已作，自知不受後有。」』</td>
-    <td id='p8'>8. “‘Therefore, Ānanda, whether forms are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither are present in the other. In this way, whether feelings … conceptions … volitions … instances of awareness are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither are present in the other when they are truly known and truly observed. When they are observed in this way, a noble disciple becomes disillusioned with form, becomes free of desire for it, and is freed from it: “My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I wont be subject to a later existence.” In this way, he becomes disillusioned with feeling … conception … volition … awareness, becomes free of desire for it, and is freed from it: “My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I wont be subject to a later existence.”’”</td>
+    <td class="ch" title='t125.2.66a21'>「『阿難！是故，色若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。如是受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在如實知，如實觀察。如是觀者，聖弟子於色生厭、離欲、解脫：「我生已盡，梵行已立，所作已作。」自知不受後有。如是受、想、行、識，生厭、離欲、解脫：「我生已盡，梵行已立，所作已作。」自知不受後有。』</td>
+    <td id='p8'>8. “‘Therefore, Ānanda, whether forms are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither are present in the other. In this way, whether feelings … conceptions … volitions … instances of awareness are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither are present in the other when they are truly known and truly observed. When they are observed in this way, a noble disciple becomes disillusioned with form, becomes free of desire for it, and is freed from it: “My births have been ended, the religious practice has been established, and the task has been accomplished.” They themselves know they won’t be subject to a later existence. In this way, they become disillusioned with feeling … conception … volition … awareness, becomes free of desire for it, and is freed from it: “My births have been ended, the religious practice has been established, and the task has been accomplished.” They themselves know they won’t be subject to a later existence.’”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b2'>「諸比丘當知，彼尊者於我有大饒益，我從彼尊者所聞法已，遠塵離垢，得法眼淨。我從是來，常以此法為四眾說，非餘外道沙門、婆羅門出家者說。」</td>
@@ -89,6 +89,6 @@ It’s of interest to note that the illustrating metaphors of someone seeing the
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 4 March 2024</p>
+<p class='revised'>Last Revised: 2 January 2026</p>
 
 <hr/>
