--- a/01_agama/samyukta/01/SA1_47.md
+++ b/01_agama/samyukta/01/SA1_47.md
@@ -138,12 +138,12 @@ next: SA1_48.html
     <td id='p24'>24. The Buddha told the monk, “Whatever forms there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither is present in the other. Thus, whatever feelings … conceptions … volitions … instances of awareness there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither is present in the other.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b13'>「比丘！於色當生厭離、厭、離欲、解脫。如是於受、想、行、識，當生厭、離欲、解脫，解脫知見：『我生已盡，梵行已立，所作已作，自知不受後有。』」</td>
-    <td id='p25'>25. “Monk, you should reject form and become disillusioned and free of desire for it, and be liberated. Thus, you should reject feeling … conception … volition … awareness and become disillusioned and free of desire for it, and be liberated. Being liberated, you will know and see: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+    <td class="ch" title='t125.2.68b13'>「比丘！於色當生厭離、厭、離欲、解脫。如是於受、想、行、識，當生厭、離欲、解脫，解脫知見：『我生已盡，梵行已立，所作已作。』自知不受後有。」</td>
+    <td id='p25'>25. “Monk, you should reject form and become disillusioned and free of desire for it, and be liberated. Thus, you should reject feeling … conception … volition … awareness and become disillusioned and free of desire for it, and be liberated. Being liberated, you will know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ You yourself will know you won’t be subject to a later existence.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b21'>時，彼比丘聞佛所說，踊躍歡喜，作禮而去。常念土摶譬教授，獨一靜處，精勤思惟，不放逸住；不放逸住已：「所以善男子剃除鬚髮，正信非家，出家學道，為究竟無上梵行，見法自知身作證：『我生已盡，梵行已立，所作已作，自知不受後有。』」</td>
-    <td id='p26'>26. That monk celebrated and rejoiced after hearing what the Buddha taught. He then bowed and departed. Continuously mindful of that instruction based on the simile of the clod of dirt, he went alone to a quiet place, diligently contemplated it, and lived earnestly. Having lived earnestly, [he thought,] “A good son leaves home, cuts off his hair and beard, [puts on the Dharma robes,] believes at home in being homeless, and leaves home to train on the path. That’s the way he reaches the ultimate and unsurpassed religious life. He’ll himself realize in the present life: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+    <td class="ch" title='t125.2.68b21'>時，彼比丘聞佛所說，踊躍歡喜，作禮而去。常念土摶譬教授，獨一靜處，精勤思惟，不放逸住；不放逸住已：「所以善男子剃除鬚髮，正信非家，出家學道，為究竟無上梵行，見法自知身作證：『我生已盡，梵行已立，所作已作。』自知不受後有。」</td>
+    <td id='p26'>26. That monk celebrated and rejoiced after hearing what the Buddha taught. He then bowed and departed. Continuously mindful of that instruction based on the simile of the clod of dirt, he went alone to a quiet place, diligently contemplated it, and lived earnestly. Having lived earnestly, [he thought,] “A good son leaves home, cuts off his hair and beard, [puts on the Dharma robes,] believes at home in being homeless, and leaves home to train on the path. That’s the way he reaches the ultimate and unsurpassed religious practice. He’ll himself realize in the present life: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ He himself will know he won’t be subject to a later existence.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.68b27'>時，彼尊者亦自知法，心得解脫，成阿羅漢。</td>
