--- a/01_agama/samyukta/01/SA1_45.md
+++ b/01_agama/samyukta/01/SA1_45.md
@@ -35,7 +35,7 @@ next: SA1_46.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b20'>闡陀復言：「是中誰復有力堪能為我說法，令我知法、見法？」復作是念：「尊者阿難今在拘睒彌國瞿師羅園，曾供養親覲世尊，佛所讚歎，諸梵行者皆悉識知。彼必堪能為我說法，令我知法、見法。」</td>
-    <td id='p6'>6. Chandaka again said, “Who has the ability and capacity to teach me the Dharma, to make me know and see the Dharma?” Then, he thought, “Venerable Ānanda is staying at Ghoṣila Park of Kauśāmbī. He had supported the Bhagavān and was close to him. He was praised by the Buddha, and those of the religious life all know him. Surely, he can teach me the Dharma and make me know and see the Dharma.”</td>
+    <td id='p6'>6. Chandaka again said, “Who has the ability and capacity to teach me the Dharma, to make me know and see the Dharma?” Then, he thought, “Venerable Ānanda is staying at Ghoṣila Park of Kauśāmbī. He had supported the Bhagavān and was close to him. He was praised by the Buddha, and those of the religious practice all know him. Surely, he can teach me the Dharma and make me know and see the Dharma.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b24'>時，闡陀過此夜已，晨朝著衣持鉢，入波羅㮈城乞食。食已，還攝舉臥具，攝臥具已，持衣鉢詣拘睒彌國，漸漸遊行到拘睒彌國，攝舉衣鉢，洗足已，詣尊者阿難所，共相問訊已，却坐一面。</td>
@@ -55,7 +55,7 @@ next: SA1_46.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b29'>「我爾時作是念：『是中誰復有力堪能為我說法，令我知法、見法？』我時復作是念：『尊者阿難今在拘睒彌國瞿師羅園，曾供養親覲世尊，佛所讚歎，諸梵行者皆悉知識。彼必堪能為我說法，令我知法、見法。』</td>
-    <td id='p11'>11. “Then I thought, ‘Who is there who has the ability and capacity to teach me the Dharma and make me know and see the Dharma?’ Again, I thought, ‘Venerable Ānanda is staying at Ghoṣila Park of Kauśāmbī. He had supported the Bhagavān and was close to him. He was praised by the Buddha, and those of the religious life all know him. Surely, he can teach me the Dharma and make me know and see the Dharma.’</td>
+    <td id='p11'>11. “Then I thought, ‘Who is there who has the ability and capacity to teach me the Dharma and make me know and see the Dharma?’ Again, I thought, ‘Venerable Ānanda is staying at Ghoṣila Park of Kauśāmbī. He had supported the Bhagavān and was close to him. He was praised by the Buddha, and those of the religious practice all know him. Surely, he can teach me the Dharma and make me know and see the Dharma.’</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.66b29'>「善哉！尊者阿難今當為我說法，令我知法、見法。」</td>
@@ -63,7 +63,7 @@ next: SA1_46.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.66c18'>時，尊者阿難語闡陀言：「善哉！闡陀！我意大喜，我慶仁者能於梵行人前，無所覆藏，破虛偽刺。闡陀！愚癡凡夫所不能解色無常，受、想、行、識無常，一切諸行無常，一切法無我，涅槃寂滅。汝今堪受勝妙法，汝今諦聽，當為汝說。」</td>
-    <td id='p13'>13. Venerable Ānanda then said to Chandaka, “Good, Chandaka! I would be happy to do that. Congratulations, sir, for being able to come before someone of the religious life without hiding anything and destroying the thorn of pretense. Chandaka, foolish, ordinary people aren’t able to understand that form is impermanent … that feeling … conception … volition … awareness is impermanent. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation.”</td>
+    <td id='p13'>13. Venerable Ānanda then said to Chandaka, “Good, Chandaka! I would be happy to do that. Congratulations, sir, for being able to come before someone of the religious practice without hiding anything and destroying the thorn of pretense. Chandaka, foolish, ordinary people aren’t able to understand that form is impermanent … that feeling … conception … volition … awareness is impermanent. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.66c23'>時，闡陀作是念：「我今歡喜得勝妙心、得踊悅心，我今堪能受勝妙法。」</td>
@@ -91,7 +91,7 @@ next: SA1_46.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.67a8'>恭敬合掌白尊者阿難言：「正應如是。如是智慧梵行，善知識教授教誡說法。我今從尊者阿難所，聞如是法，於一切行皆空、皆悉寂、不可得、愛盡、離欲、滅盡、涅槃，心樂正住解脫，不復轉還，不復見我，唯見正法。」</td>
-    <td id='p20'>20. He then saluted Venerable Ānanda with his palms together and said, “Precisely as it should be! Thus does a wise and good friend in the religious life teach, confer, and instruct another in the Dharma. Now, I’ve heard the Dharma in this way from Venerable Ānanda. All actions are empty. They are all peaceful and unobtainable. Craving has ended, and I’ve become free of desire. With complete cessation and <em>nirvāṇa</em>, the mind is happy, properly abiding, and liberated. It doesn’t revert back again and doesn’t have views of self anymore. One only sees the correct Dharma.”</td>
+    <td id='p20'>20. He then saluted Venerable Ānanda with his palms together and said, “Precisely as it should be! Thus does a wise and good friend in the religious practice teach, confer, and instruct another in the Dharma. Now, I’ve heard the Dharma in this way from Venerable Ānanda. All actions are empty. They are all peaceful and unobtainable. Craving has ended, and I’ve become free of desire. With complete cessation and <em>nirvāṇa</em>, the mind is happy, properly abiding, and liberated. It doesn’t revert back again and doesn’t have views of self anymore. One only sees the correct Dharma.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.67a16'>時，阿難語闡陀言：「汝今得大善利，於甚深佛法中，得聖慧眼。」</td>
@@ -142,6 +142,6 @@ It would seem that Buddhists were often contending with people who thought of ex
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 5 March 2024</p>
+<p class='revised'>Last Revised: 2 January 2026</p>
 
 <hr/>
