corrections and fixes

--- a/01_agama/ekottarika/14/EA_14_05.md
+++ b/01_agama/ekottarika/14/EA_14_05.md
@@ -27,7 +27,7 @@ next: EA_14_06.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.576b27'>「是故，諸比丘，常當正意。 莫興婬想，愼莫他婬。 如是，諸比丘，當作是學。」</td>
-    <td id='p4'>4. “Therefore, monks, one should always be right minded. Don’t produce notions of lust, and take care not to have such relations with others. Thus, monks, you should train yourselves.”</td>
+    <td id='p4'>4. “Therefore, monks, one should always be right-minded. Don’t produce notions of lust, and take care not to have such relations with others. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576b28'>爾時，諸比丘聞佛所說歡喜，奉行。</td>
